--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,7 @@
 @()
 
 @main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+    <div class="container">
+        <h1>Welcome to Play!</h1>
+    </div>
 }
