--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,7 +18,7 @@
     <body>
         @* And here's where we render the `Html` object containing
          * the page content. *@
-        @views.html.navbar()
+        @views.html.shared.navbar()
         @content
 
         <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
