--- a/app/views/user/create.scala.html
+++ b/app/views/user/create.scala.html
@@ -1,4 +1,4 @@
-@()
+@(userForm: Form[User])
 
 @main("Create Student") {
     <div class="pt-md-5">
@@ -10,75 +10,90 @@
 
         <div class="row">
             <div class="col-md-8">
-                <form>
-                    <div class="form-row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="firstName">First Name</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="First Name">
-                            </div>
+            @helper.form(action = routes.UserController.create()) {
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="firstName">First Name</label>
+                            <input type="text" class="form-control" id="firstName" placeholder="First Name">
                         </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="lastName">Last Name</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-                            </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" class="form-control" id="lastName" placeholder="Last Name">
                         </div>
-                    </div><!-- End of name -->
+                    </div>
+                </div>
+                    <!-- End of name -->
 
-                    <div class="form-row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="street">Street</label>
-                                <input type="text" class="form-control" id="street" placeholder="Street">
-                            </div>
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="street">Street</label>
+                            <input type="text" class="form-control" id="street" placeholder="Street">
                         </div>
-                    </div><!-- End of street address -->
+                    </div>
+                </div>
+                    <!-- End of street address -->
 
-                    <div class="form-row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="city">City</label>
-                                <input type="text" class="form-control" id="city" placeholder="City">
-                            </div>
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="city">City</label>
+                            <input type="text" class="form-control" id="city" placeholder="City">
                         </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="state">State</label>
-                                <input type="text" class="form-control" id="state" placeholder="State">
-                            </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="state">State</label>
+                            <input type="text" class="form-control" id="state" placeholder="State">
                         </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="zip">Postal Code</label>
-                                <input type="text" class="form-control" id="zip" placeholder="Postal Code">
-                            </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="zip">Postal Code</label>
+                            <input type="text" class="form-control" id="zip" placeholder="Postal Code">
                         </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="coutry">Country</label>
-                                <input type="text" class="form-control" id="coutry" placeholder="Country">
-                            </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="coutry">Country</label>
+                            <input type="text" class="form-control" id="coutry" placeholder="Country">
                         </div>
-                    </div><!-- End of address -->
+                    </div>
+                </div>
+                    <!-- End of address -->
 
-                    <div class="form-row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="Email">
-                            </div>
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Email">
                         </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="phone">Phone</label>
-                                <input type="text" class="form-control" id="phone" placeholder="123-456-7890">
-                            </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="phone">Phone</label>
+                            <input type="text" class="form-control" id="phone" placeholder="123-456-7890">
                         </div>
-                    </div><!-- End of contact info -->
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="reset" class="btn btn-secondary">Clear</button>
-                </form>
+                    </div>
+                </div>
+                    <!-- End of contact info -->
+
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password" placeholder="">
+                        </div>
+                    </div>
+                    <div class="col"></div>
+                </div>
+                    <!-- End of password -->
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="reset" class="btn btn-secondary">Clear</button>
+            }
             </div>
         </div>
     </div>
