--- a/app/views/user/create.scala.html
+++ b/app/views/user/create.scala.html
@@ -10,18 +10,16 @@
 
         <div class="row">
             <div class="col-md-8">
-            @helper.form(action = routes.UserController.create()) {
+            @helper.form(action = helper.CSRF(routes.UserController.create())) {
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <label for="firstName">First Name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                        @helper.inputText(userForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="lastName">Last Name</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                        @helper.inputText(userForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name")
                         </div>
                     </div>
                 </div>
