--- a/app/views/user/create.scala.html
+++ b/app/views/user/create.scala.html
@@ -66,14 +66,12 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Email">
+                        @helper.inputText(userForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="phone">Phone</label>
-                            <input type="text" class="form-control" id="phone" placeholder="123-456-7890">
+                        @helper.inputText(userForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone")
                         </div>
                     </div>
                 </div>
@@ -82,8 +80,7 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="">
+                        @helper.inputPassword(userForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password")
                         </div>
                     </div>
                     <div class="col"></div>
