--- a/app/views/student/create.scala.html
+++ b/app/views/student/create.scala.html
@@ -1,95 +1,90 @@
 @(studentForm: Form[Student])
 
-@main("Create Student") {
-    <div class="pt-md-5">
-        <div class="page-header row">
-            <div class="col-sm-12">
-                <h1>Create Student</h1>
+    @main("Create Student") {
+        <div class="pt-md-5">
+            <div class="page-header row">
+                <div class="col-sm-12">
+                    <h1>Create Student</h1>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-8">
+                @helper.form(action = helper.CSRF(routes.StudentController.create())) {
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name")
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name")
+                            </div>
+                        </div>
+                    </div>
+                        <!-- End of name -->
+
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("street"), 'id -> "street", 'class -> "form-control", '_label -> "Street")
+                            </div>
+                        </div>
+                    </div>
+                        <!-- End of street address -->
+
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("city"), 'id -> "city", 'class -> "form-control", '_label -> "City")
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("state"), 'id -> "state", 'class -> "form-control", '_label -> "State")
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("zip"), 'id -> "zip", 'class -> "form-control", '_label -> "Postal Code")
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("country"), 'id -> "country", 'class -> "form-control", '_label -> "Country")
+                            </div>
+                        </div>
+                    </div>
+                        <!-- End of address -->
+
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email")
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputText(studentForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone")
+                            </div>
+                        </div>
+                    </div>
+                        <!-- End of contact info -->
+
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                            @helper.inputPassword(studentForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password")
+                            </div>
+                        </div>
+                        <div class="col"></div>
+                    </div>
+                        <!-- End of password -->
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="reset" class="btn btn-secondary">Clear</button>
+                }
+                </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-8">
-            @helper.form(action = helper.CSRF(routes.StudentController.create())) {
-                <div class="form-row">
-                    <div class="col">
-                        <div class="form-group">
-                        @helper.inputText(studentForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name")
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                        @helper.inputText(studentForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name")
-                        </div>
-                    </div>
-                </div>
-                    <!-- End of name -->
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="street">Street</label>
-                            <input type="text" class="form-control" id="street" placeholder="Street">
-                        </div>
-                    </div>
-                </div>
-                    <!-- End of street address -->
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="city">City</label>
-                            <input type="text" class="form-control" id="city" placeholder="City">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="state">State</label>
-                            <input type="text" class="form-control" id="state" placeholder="State">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="zip">Postal Code</label>
-                            <input type="text" class="form-control" id="zip" placeholder="Postal Code">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="coutry">Country</label>
-                            <input type="text" class="form-control" id="coutry" placeholder="Country">
-                        </div>
-                    </div>
-                </div>
-                    <!-- End of address -->
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="form-group">
-                        @helper.inputText(studentForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email")
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                        @helper.inputText(studentForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone")
-                        </div>
-                    </div>
-                </div>
-                    <!-- End of contact info -->
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="form-group">
-                        @helper.inputPassword(studentForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password")
-                        </div>
-                    </div>
-                    <div class="col"></div>
-                </div>
-                    <!-- End of password -->
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="reset" class="btn btn-secondary">Clear</button>
-            }
-            </div>
-        </div>
-    </div>
-}
+    }
