--- a/app/views/student/show.scala.html
+++ b/app/views/student/show.scala.html
@@ -1,7 +1,124 @@
 @(student: Student)
 
 @main("Student") {
-    <h1>show</h1>
-    id: @student.getId
-    name: @student.getFirstName @student.getLastName
+
+    <form>
+        <div class="row mb-10">
+            <div class="col col-md-2">
+                <select class="form-control">
+                    <option value="student" selected>Student</option>
+                    <option value="faculty">Faculty</option>
+                </select>
+            </div>
+        </div>
+    </form>
+
+    <table class="table">
+        <thead class="thead-light">
+        <tr>
+            <th scope="col">Student ID</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Major</th>
+            <th scope="col">Minor</th>
+            <th scope="col"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        <tr>
+            <td>studentID</td>
+            <td>lastName</td>
+            <td>firstName</td>
+            <td>Computer Science</td>
+            <td>Business</td>
+            <td><a href="#">View</a></td>
+            <td><a href="#">Edit</a></td>
+            <td><a href="#">Delete</a></td>
+        </tr>
+        </tbody>
+    </table>
+
+    <a class="btn btn-primary mt-5" href="#" role="button">Back to top</a>
+
+</div>
 }
