Added views for admin role

--- a/app/views/course/create.scala.html
+++ b/app/views/course/create.scala.html
@@ -12,7 +12,7 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <label for="schedule">Schedule#</label>
+                            <label for="schedule">Course ID</label>
                             <input type="number" class="form-control" id="schedule" placeholder="Schedule#">
                         </div>
                     </div>
@@ -67,46 +67,6 @@
                     </div>
                 </div>
                     <!-- End of Date held -->
-
-
-                    <!--Creating selections for Time Held (INLINE)-->
-                    <!--<div class="form-row">-->
-                    <!--<div class="col">-->
-                    <!--<label>Time Held</label>-->
-                    <!--</div>-->
-                    <!--</div>-->
-
-                    <!--<div class="form-row">-->
-                    <!--<div class="col">-->
-                    <!--<div class="form-group">-->
-                    <!--<select class="custom-select-inline" id="selectHourHeld">-->
-                    <!--<option value="9"selected>9</option>-->
-                    <!--<option value="10">10</option>-->
-                    <!--<option value="11">11</option>-->
-                    <!--<option value="12">12</option>-->
-                    <!--<option value="1">1</option>-->
-                    <!--<option value="2">2</option>-->
-                    <!--<option value="3">3</option>-->
-                    <!--<option value="4">4</option>-->
-                    <!--<option value="5">5</option>-->
-                    <!--<option value="6">6</option>-->
-                    <!--<option value="7">7</option>-->
-                    <!--<option value="8">8</option>-->
-                    <!--</select>-->
-                    <!--<select class="custom-select-inline" id="selectMinuteHeld">-->
-                    <!--<option value="0" selected>:00</option>-->
-                    <!--<option value="15">:15</option>-->
-                    <!--<option value="30">:30</option>-->
-                    <!--<option value="45">:45</option>-->
-                    <!--</select>-->
-                    <!--<select class="custom-select-inline" id="selectPeriodHeld">-->
-                    <!--<option value="am" selected>AM</option>-->
-                    <!--<option value="pm">PM</option>-->
-                    <!--</select>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--End of Time Held (INLINE)-->
 
                     <!--Alternative for Time Start (Form Control)-->
                 <div class="form-row">
@@ -283,7 +243,7 @@
                     <!--End of misc. course info-->
 
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="reset" class="btn btn-secondary">Clear</button>
+                <button type="reset" class="btn btn-secondary">Cancel</button>
 
             </div>
         </div>
