--- a/app/views/student/create.scala.html
+++ b/app/views/student/create.scala.html
@@ -82,7 +82,7 @@
                     </div>
                         <!-- End of password -->
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="reset" class="btn btn-secondary">Clear</button>
+                    <button type="reset" class="btn btn-secondary">Cancel</button>
                 }
                 </div>
             </div>
