--- a/app/views/student/create.scala.html
+++ b/app/views/student/create.scala.html
@@ -1,4 +1,6 @@
-@(studentForm: Form[Student])
+@import java.util
+@import helper._
+@(studentForm: Form[Student], majors: Map[String, String])
 
 @main("Create Student") {
     <div class="pt-md-5">
@@ -10,16 +12,16 @@
 
         <div class="row">
             <div class="col-md-8">
-            @helper.form(action = helper.CSRF(routes.StudentController.create())) {
+            @form(action = CSRF(routes.StudentController.save())) {
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name")
+                        @inputText(studentForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name")
+                        @inputText(studentForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name")
                         </div>
                     </div>
                 </div>
@@ -28,7 +30,7 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("street"), 'id -> "street", 'class -> "form-control", '_label -> "Street")
+                        @inputText(studentForm("street"), 'id -> "street", 'class -> "form-control", '_label -> "Street")
                         </div>
                     </div>
                 </div>
@@ -37,22 +39,22 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("city"), 'id -> "city", 'class -> "form-control", '_label -> "City")
+                        @inputText(studentForm("city"), 'id -> "city", 'class -> "form-control", '_label -> "City")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("state"), 'id -> "state", 'class -> "form-control", '_label -> "State")
+                        @inputText(studentForm("state"), 'id -> "state", 'class -> "form-control", '_label -> "State")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("zip"), 'id -> "zip", 'class -> "form-control", '_label -> "Postal Code")
+                        @inputText(studentForm("zip"), 'id -> "zip", 'class -> "form-control", '_label -> "Postal Code")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("country"), 'id -> "country", 'class -> "form-control", '_label -> "Country")
+                        @inputText(studentForm("country"), 'id -> "country", 'class -> "form-control", '_label -> "Country")
                         </div>
                     </div>
                 </div>
@@ -61,12 +63,12 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email")
+                        @inputText(studentForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputText(studentForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone")
+                        @inputText(studentForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone")
                         </div>
                     </div>
                 </div>
@@ -75,12 +77,28 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @helper.inputPassword(studentForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password")
+                        @inputPassword(studentForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password")
                         </div>
                     </div>
                     <div class="col"></div>
                 </div>
                     <!-- End of password -->
+
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                        @select(
+                            studentForm("major.id"),
+                            options(majors),
+                            '_label -> "Major",
+                            '_default -> "-- Choose a major --",
+                            '_showConstraints -> false,
+                            'class -> "form-control"
+                        )
+                        </div>
+                    </div>
+                </div>
+
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="reset" class="btn btn-secondary">Cancel</button>
             }
