make controller action async. add minor to student object

--- a/app/views/student/create.scala.html
+++ b/app/views/student/create.scala.html
@@ -97,6 +97,19 @@
                         )
                         </div>
                     </div>
+
+                    <div class="col">
+                        <div class="form-group">
+                        @select(
+                            studentForm("minor.id"),
+                            options(majors),
+                            '_label -> "Minor",
+                            '_default -> "-- Choose a minor --",
+                            '_showConstraints -> false,
+                            'class -> "form-control"
+                        )
+                        </div>
+                    </div>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
