--- a/app/views/student/edit.scala.html
+++ b/app/views/student/edit.scala.html
@@ -1,3 +1,7 @@
+@import java.util
+@import helper._
+@(id: Long, studentForm: Form[Student], majors: Map[String, String])
+
 @main("Edit Student") {
     <div class="pt-md-5">
         <div class="page-header row">
@@ -9,38 +13,11 @@
         <div class="row">
             <div class="col-md-8">
 
+            @form(action = CSRF(routes.StudentController.update(id))) {
                 <div class="form-row">
-                    <div class="col">
+                    <div class="col col-md-6">
                         <div class="form-group">
-                            <label for="id">Student ID</label>
-                            <input type="text" class="form-control" id="id" placeholder="<studentID>" readonly>
-                        </div>
-                    </div>
-
-                    <div class="col"></div>
-                </div>
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="firstName">First Name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="First Name">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="lastName">Last Name</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="street1">Street</label>
-                            <input type="text" class="form-control" id="street1" placeholder="Street 1">
+                        @inputText(studentForm("id"), 'id -> "id", 'class -> "form-control", '_label -> "Student ID", 'readonly -> "readonly")
                         </div>
                     </div>
                 </div>
@@ -48,28 +25,12 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="street2" placeholder="Street 2">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="col-6">
-                        <div class="form-group">
-                            <label for="street1">City</label>
-                            <input type="text" class="form-control" id="city" placeholder="City">
+                        @inputText(studentForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="street1">State</label>
-                            <input type="text" class="form-control" id="state" placeholder="State">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="street1">Zip Code</label>
-                            <input type="text" class="form-control" id="zip" placeholder="Zip Code">
+                        @inputText(studentForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name")
                         </div>
                     </div>
                 </div>
@@ -77,8 +38,7 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <label for="street1">Country</label>
-                            <input type="text" class="form-control" id="country" placeholder="Country">
+                        @inputText(studentForm("street"), 'id -> "street", 'class -> "form-control", '_label -> "Street")
                         </div>
                     </div>
                 </div>
@@ -86,37 +46,81 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <label for="email">Email Address</label>
-                            <input type="email" class="form-control" id="email" placeholder="Email Address">
+                        @inputText(studentForm("city"), 'id -> "city", 'class -> "form-control", '_label -> "City")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="phone">Phone</label>
-                            <input type="text" class="form-control" id="phone" placeholder="(###) ###-####">
+                        @inputText(studentForm("state"), 'id -> "state", 'class -> "form-control", '_label -> "State")
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                        @inputText(studentForm("zip"), 'id -> "zip", 'class -> "form-control", '_label -> "Postal Code")
                         </div>
                     </div>
                 </div>
 
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                        @inputText(studentForm("country"), 'id -> "country", 'class -> "form-control", '_label -> "Country")
+                        </div>
+                    </div>
+                </div>
 
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                            <label for="major">Major</label>
-                            <input type="text" class="form-control" id="major" placeholder="Major">
+                        @inputText(studentForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email")
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="minor">Minor</label>
-                            <input type="text" class="form-control" id="minor" placeholder="Minor">
+                        @inputText(studentForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone")
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="col col-md-6">
+                        <div class="form-group">
+                        @inputPassword(studentForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password")
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-group">
+                        @select(
+                            studentForm("major.id"),
+                            options(majors),
+                            '_label -> "Major",
+                            '_default -> "-- Choose a major --",
+                            '_showConstraints -> false,
+                            'class -> "form-control"
+                        )
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="form-group">
+                        @select(
+                            studentForm("minor.id"),
+                            options(majors),
+                            '_label -> "Minor",
+                            '_default -> "-- Choose a minor --",
+                            '_showConstraints -> false,
+                            'class -> "form-control"
+                        )
                         </div>
                     </div>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="reset" class="btn btn-secondary">Cancel</button>
-
+            }
             </div>
         </div>
     </div>
