--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,9 +1,9 @@
 @*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
+* This template is called from the `index` template. This template
+* handles the rendering of the page header and body tags. It takes
+* two arguments, a `String` for the title of the page and an `Html`
+* object to insert into the body of the page.
+*@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
@@ -17,17 +17,12 @@
     </head>
     <body>
         @* And here's where we render the `Html` object containing
-         * the page content. *@
+        * the page content. *@
         <header class="sticky-top">
-        <!--@views.html.shared.header()-->
         @views.html.shared.navbar()
         </header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-2">Sidebar</div>
-                <div class="col-md-10">@content</div>
-            </div>
-        </div>
+
+        @content
 
         <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
