add validation for Student

--- a/app/views/student/create.scala.html
+++ b/app/views/student/create.scala.html
@@ -18,12 +18,12 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @inputText(studentForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name")
+                        @inputText(studentForm("firstName"), 'id -> "firstName", 'class -> "form-control", '_label -> "First Name", '_showConstraints -> false)
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                        @inputText(studentForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name")
+                        @inputText(studentForm("lastName"), 'id -> "lastName", 'class -> "form-control", '_label -> "Last Name", '_showConstraints -> false)
                         </div>
                     </div>
                 </div>
@@ -65,12 +65,12 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @inputText(studentForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email")
+                        @inputText(studentForm("email"), 'id -> "email", 'class -> "form-control", '_label -> "Email", '_showConstraints -> false)
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                        @inputText(studentForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone")
+                        @inputText(studentForm("phone"), 'id -> "phone", 'class -> "form-control", '_label -> "Phone", '_showConstraints -> false)
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
-                        @inputPassword(studentForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password")
+                        @inputPassword(studentForm("password"), 'id -> "password", 'class -> "form-control", '_label -> "Password", '_showConstraints -> false)
                         </div>
                     </div>
                     <div class="col"></div>
