fix some UI issue

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -19,7 +19,7 @@
                 <div class="card-body">
                     <h5 class="card-title">User Management</h5>
                     <p class="card-text">You can manage Users by using various CRUD operations.</p>
-                    <a href="#" class="btn btn-primary">Users</a>
+                    <a href="@routes.StudentController.all()" class="btn btn-primary">Users</a>
                 </div>
             </div>
         </div>
