--- a/app/views/student/list.scala.html
+++ b/app/views/student/list.scala.html
@@ -1,112 +1,113 @@
-@main("Student List") {
-<div class="pt-md-5">
-    <div class="page-header row">
-        <div class="col-sm-12">
-            <h1>Users</h1>
-        </div>
-    </div>
-
-    <form>
-        <div class="row mb-10">
-            <div class="col col-md-2">
-                <select class="form-control">
-                    <option value="student" selected>Student</option>
-                    <option value="faculty">Faculty</option>
-                </select>
+@sidebarLayout("Student List") {
+    @views.html.shared.adminSidebar()
+} {
+    <div class="pt-md-5">
+        <div class="page-header row">
+            <div class="col-sm-12">
+                <h1>Users</h1>
             </div>
         </div>
-    </form>
+
+        <form>
+            <div class="row mb-10">
+                <div class="col col-md-2">
+                    <select class="form-control">
+                        <option value="student" selected>Student</option>
+                        <option value="faculty">Faculty</option>
+                    </select>
+                </div>
+            </div>
+        </form>
 
 
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Student ID</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Major</th>
+                    <th scope="col">Minor</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+                <tr>
+                    <td>studentID</td>
+                    <td>lastName</td>
+                    <td>firstName</td>
+                    <td>Computer Science</td>
+                    <td>Business</td>
+                    <td><a href="#">View/Edit</a></td>
+                </tr>
+            </tbody>
+        </table>
 
-    <table class="table">
-        <thead class="thead-light">
-        <tr>
-            <th scope="col">Student ID</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Major</th>
-            <th scope="col">Minor</th>
-            <th scope="col"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        <tr>
-            <td>studentID</td>
-            <td>lastName</td>
-            <td>firstName</td>
-            <td>Computer Science</td>
-            <td>Business</td>
-            <td><a href="#">View/Edit</a></td>
-        </tr>
-        </tbody>
-    </table>
+        <a class="btn btn-primary mt-5" href="#" role="button">Back to top</a>
 
-    <a class="btn btn-primary mt-5" href="#" role="button">Back to top</a>
-
-</div>
+    </div>
 }
