fetch live data for student list

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,10 @@
-@main("Home") {
+@sidebarLayout("Home") {
+    @views.html.shared.adminSidebar()
+}{
 <div class="pt-md-5">
     <div class="page-header row">
         <div class="col">
-            <h1>Hello, &ltadminName&gt!</h1>
+            <h1>Hello Admin!</h1>
         </div>
     </div>
     <div class="row">
