--- a/app/views/shared/adminSidebar.scala.html
+++ b/app/views/shared/adminSidebar.scala.html
@@ -5,7 +5,7 @@
         </li>
 
         <li class="list-group-item">
-            Create new student
+            <a href="@routes.StudentController.create()">Create new student</a>
         </li>
 
         <li class="list-group-item">
