--- a/app/views/student/view.scala.html
+++ b/app/views/student/view.scala.html
@@ -1,6 +1,8 @@
 @(student: Student)
 
-@main("View Student") {
+@sidebarLayout("View Student") {
+    @views.html.shared.adminSidebar()
+}{
     <div class="pt-md-5">
         <div class="page-header row">
             <div class="col-sm-12">
