enhance Student views

--- a/app/views/student/create.scala.html
+++ b/app/views/student/create.scala.html
@@ -115,7 +115,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="reset" class="btn btn-secondary">Cancel</button>
+                <a href="@routes.StudentController.all()" class="btn btn-secondary btn-md" role="button" aria-pressed="true">Back to list</a>
             }
             </div>
         </div>
