--- a/app/views/student/view.scala.html
+++ b/app/views/student/view.scala.html
@@ -113,8 +113,8 @@
                     </div>
                 </div>
 
-                <a href="#" class="btn btn-primary btn-md" role="button" aria-pressed="true">Edit</a>
-                <a href="#" class="btn btn-secondary btn-md" role="button" aria-pressed="true">Back</a>
+                <a href="@routes.StudentController.edit(student.getId)" class="btn btn-primary btn-md" role="button" aria-pressed="true">Edit</a>
+                <a href="@routes.StudentController.all()" class="btn btn-secondary btn-md" role="button" aria-pressed="true">Back to list</a>
 
             </div>
         </div>
